spade-tests/src/snapshots/spade_tests__typeinference__comb_div_requires_number_rhs.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() {
    1 `std::ops::comb_div` true
}


error: Argument type mismatch. Expected Number<_> got bool
  ┌─ testinput:2:28
  │
2 │     1 `std::ops::comb_div` true
  │                            ^^^^ expected Number<_>
  │
  = note: Expected: Number<_>
               Got: bool
